Fix rotating images and fix home page formatting. White space still needs to be removed.

--- a/covaid/static/main.css
+++ b/covaid/static/main.css
@@ -1,6 +1,9 @@
 html {
     overflow-y: scroll;
     overflow-x: hidden;
+    margin-top:0;
+    padding-top:0;
+    height:100%;
 }
 
 #home-page-heading {
@@ -12,4 +15,10 @@ html {
 
 #home-page-carousel {
     bottom: 186px;
+    position: relative;
+    z-index: 1;
+    margin-top: 0px;
 }
+img {
+    display: block;
+  }
